# summerset

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  cluster.py  pyproject.toml  ruff.toml  rustfmt.toml
.gemini/: config.yaml
.github/: dependabot.yml  gemini.yml  workflow_test.py
.github/workflows/: build.yml  build_and_test.yml  build_and_tests.yml  format.yml  summerset.yml  tests.yml  tests_proc.yml  tests_unit.yml
benches/: rse_bench.rs
models/: bench_rs_coding.py  calc_wan_delays.py  crop_slide_pdfs.sh  motiv_profile_cdf.py  perf_calculation.py  perf_sim.py  perf_simulation.py  plot_calc_results.py  plot_cstr_bounds.py  plot_sim_results.py  prob_calculation.py  prob_tc_match.py  test_tc_netem.py  tidb_profile_cdf.py
models/bodega/: calc_table_shade.py  calc_wan_delays.py  failure_tput_sim.py  plot_wan_quorums.py
models/crossword/: motiv_profile_cdf.py  plot_cstr_bounds.py  prob_calculation.py
perf_sim/: perf_sim.py  plot_cstr_bounds.py
proto/: external_api.proto  kv_api.proto  simple_push.proto
publish/: banal_format_dump.pl  banal_formatter.pl  bibtex_merger.py  public_repo_trim.py
publish/bodega/: ARTIFACT.md  archive_results.sh  crop_algo_block.sh  crop_bench_figs.sh  crop_slide_figs.sh
publish/crossword/: ARTIFACT.md  archive_results.sh  crop_bench_figs.sh  crop_slide_figs.sh
pubtools/crossword/: crop_bench_figs.sh  crop_slide_figs.sh
scripts/: __init__.py  bench_adaptive.py  bench_bd_n_space.py  bench_breakdown.py  bench_critical.py  bench_failover.py  bench_rs_coding.py  bench_unbalanced.py  bench_ycsb_3sites.py  cluster.py  common_utils.py  distr_clients.py  distr_cluster.py  fail_rate_sim.py  hetero_fail_model.py  hetero_perf_model.py  install_devdeps.sh  install_devtools.sh  install_kernel.sh  kill_all_local_procs.sh  kill_all_procs.sh  kill_chain_procs.sh  kill_local_procs.sh  local_bench.tmp.py  local_client.py  local_clients.py  local_cluster.py  mirror_repo.py  open_tcp_ports.sh  remote_chainapp.py  remote_chaincli.py  remote_clients.py  remote_cluster.py  remote_execute.py  remote_hosts.toml  remote_iperf.py  remote_killall.py  remote_mirror.py  remote_ssh_to.py  run_servers.py  (+5 more)
scripts/bodega/: __init__.py  bench_conf_coverage.py  bench_latency_cdfs.py  bench_loc_grid_geo.py  bench_loc_grid_wan.py  bench_loc_wr_grid.py  bench_rlats_on_write.py  bench_tput_lat_curve.py  bench_tput_lat_freqs.py  bench_wlats_on_conf.py  bench_writes_sizes.py  bench_ycsb_zk_etcd.py  distr_etcdclients.py  distr_etcdclus.py  distr_etcdcluster.py  distr_zkclients.py  distr_zkcluster.py  distr_zookeeper.py  gen_ycsb_trace.py  install_devdeps.sh  intro_access_cnts.py  kill_etcd_procs.sh  kill_zookeeper_procs.sh
scripts/cloudlab/: geni_local.py
scripts/crossword/: __init__.py  bench_adaptive.py  bench_breakdown.py  bench_bw_utils.py  bench_cockroach.py  bench_critical.py  bench_failover.py  bench_load_sizes.py  bench_rs_coding.py  bench_staleness.py  bench_unbalanced.py  bench_ycsb_3sites.py  bench_ycsb_trace.py  distr_chainapp.py  distr_chaincli.py  distr_cockroach.py  distr_cockwload.py  gen_ycsb_a_trace.py  install_devdeps.sh  intro_prof_analyze.py  kill_chain_procs.sh  kill_cockroach_procs.sh  local_clients.py  remote_chainapp.py  remote_chaincli.py  remote_clients.py  remote_cluster.py
scripts/others/: kill_chain_procs.sh
scripts/setup/: __init__.py  geni_dev_1dc.py  geni_dev_reg.py  geni_dev_sites.py  geni_dev_wan.py  geni_profile_local.py  install_devdeps.sh  install_kernel.sh  open_tcp_ports.sh  resize_partition.sh  setup_net_devs.sh  setup_tcp_bufs.sh  sshkey_create.sh  sshkey_id_rsa  sshkey_id_rsa.pub  sshkey_record.sh
scripts/utils/: __init__.py  config.py  file.py  net.py  output.py  proc.py
src/: lib.rs  replica.rs  replicator.rs  rpc_sender.rs  smr_client.rs  smr_server.rs  statemach.rs  storage.rs  transport.old.rs  transport.rs  utils.rs
src/client/: apistub.rs  client.rs  ctrlstub.rs  endpoint.rs  handle.rs  mod.rs
src/core/: client.rs  external.rs  mod.rs  replica.rs  statemach.rs  storage.rs  transport.rs  utils.rs
src/manager/: clusman.rs  mod.rs  reactor.rs  reigner.rs
src/protocols/: craft.rs  crossword.rs  do_nothing.rs  hotstuff.rs  mod.rs  multipaxos.rs  raft.rs  rep_nothing.rs  rs_paxos.rs  simple_push.rs
src/server/: control.rs  external.rs  heartbeat.rs  leaseman.rs  leasing.rs  mod.rs  replica.rs  statemach.rs  storage.rs  transport.rs
src/smr/: do_nothing.rs  mod.rs
src/utils/: bitmap.rs  config.rs  error.rs  keyrange.rs  linreg.rs  mod.rs  print.rs  qdisc.rs  rscoding.rs  safetcp.rs  stopwatch.rs  timer.rs
summerset_bench/: Cargo.toml
summerset_bench/src/: main.rs
summerset_client/: Cargo.toml
summerset_client/src/: client_cl.rs  client_ol.rs  lib.rs  main.rs
summerset_client/src/clients/: bench.rs  mess.rs  mod.rs  repl.rs  tester.rs
summerset_client/src/drivers/: closed_loop.rs  mod.rs  open_loop.rs
summerset_client/src/etcd/: bench.rs  kvclient.rs  mod.rs
summerset_client/src/zookeeper/: bench.rs  mod.rs  session.rs
summerset_manager/: Cargo.toml
summerset_manager/src/: main.rs
summerset_server/: Cargo.toml
summerset_server/src/: main.rs
tla+/: install_tla2tools.sh  tlc_model_check.sh
tla+/bodega/: .gitignore  Bodega.tla  Bodega_MC.cfg  Bodega_MC.tla  Bodega_MC_large.cfg
tla+/crossword/: .gitignore  ConsensusMulti.tla  Crossword.tla  Crossword_MC.cfg  Crossword_MC.tla
tla+/multipaxos/: ConsensusMulti.tla  MultiPaxos.tla  MultiPaxos_MC.cfg  MultiPaxos_MC.tla
tla+/multipaxos_canonical/: ConsensusMulti.cfg  ConsensusMulti.tla  MultiPaxos_MC.cfg  MultiPaxos_MC.tla
tla+/multipaxos_practical/: MultiPaxos.tla  MultiPaxos_MC.cfg  MultiPaxos_MC.tla
tla+/multipaxos_smr_addon/: MultiPaxos.tla  MultiPaxos_MC.cfg  MultiPaxos_MC.tla  MultiPaxos_MC_lease.cfg  MultiPaxos_MC_rwqrm.cfg  MultiPaxos_MC_small.cfg
tla+/multipaxos_smr_style/: .gitignore  MultiPaxos.tla  MultiPaxos_MC.cfg  MultiPaxos_MC.tla  MultiPaxos_MC_small.cfg  README.md
tla+/paxos/: .gitignore  Consensus.tla  ConsensusSingle.cfg  ConsensusSingle.tla  Paxos.tla  PaxosByHand.tla  PaxosPlusCal.tla  (+3 more)
(+107 files in other folders)
