[workspace]
members = ["summerset_server", "summerset_client", "summerset_manager"]

[package]
name = "summerset"
description = "Distributed KV-store for SMR Protocol Research Purposes"
version = "0.1.0"
edition = "2021"
authors = ["Guanzhou Hu <me@josehu.com>"]

[dependencies]
async-trait = "0.1"
fixedbitset = { version = "0.5", features = ["serde"] }
rangemap = "1.5"
flashmap = "0.1"
bytes = { version = "1.7", features = ["serde"] }
futures = "0.3"
tokio = { version = "1.39", features = ["full"] }
rand = "0.8"
lazy_static = "1.5"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
toml = { version = "0.8", features = ["parse"] }
log = "0.4"
env_logger = "0.11"
reed-solomon-erasure = { version = "6.0" }
ctrlc = { version = "3.4", features = ["termination"] }
get-size = { version = "0.1", features = ["derive"] }
linreg = "0.2"
statistical = "1.0"

[dev-dependencies]
criterion = "0.5"

[features]
rse-simd = ["reed-solomon-erasure/simd-accel"]

[[bench]]
name = "rse_bench"
harness = false
