[workspace]
members = ["summerset_server", "summerset_client", "summerset_manager"]

[package]
name = "summerset"
description = "Distributed KV-store for SMR Protocol Research Purposes"
version = "0.1.0"
edition = "2021"
authors = ["Guanzhou Hu <me@josehu.com>"]

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
rand = "0.8"
rand_distr = "0.4"
rangemap = "1.5"
lazy_static = "1.5"
bytes = { version = "1.7", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8", features = ["parse"] }
log = "0.4"
env_logger = "0.11"
clap = { version = "4.0", features = ["derive"] }
ctrlc = { version = "3.4", features = ["termination"] }
color-print = { version = "0.3", features = ["terminfo"] }
zookeeper-client = "0.8"
etcd-client = "0.14"

[dependencies]
tokio = { workspace = true }
rand = { workspace = true }
rangemap = { workspace = true }
lazy_static = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
async-trait = "0.1"
fixedbitset = { version = "0.5", features = ["serde"] }
atomic_refcell = "0.1"
flashmap = "0.1"
futures = "0.3"
bincode = "1.3"
reed-solomon-erasure = { version = "6.0" }
petgraph = "0.6"
get-size = { version = "0.1", features = ["derive"] }
linreg = "0.2"
statistical = "1.0"
# these are just for error conversion; could do it in a better way
ctrlc = { workspace = true }
zookeeper-client = { workspace = true }
etcd-client = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[features]
rse-simd = ["reed-solomon-erasure/simd-accel"]

[[bench]]
name = "rse_bench"
harness = false
