[workspace]
members = ["summerset_server", "summerset_client", "summerset_manager"]

[package]
name = "summerset"
description = "Distributed KV-store for SMR protocols research"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
authors = ["Guanzhou Hu <me@josehu.com>"]

[workspace.dependencies]
tokio = { version = "1.48", features = ["full"] }
rand = "0.9"
rand_distr = "0.5"
rangemap = { version = "1.7", features = ["serde1"] }
bytes = { version = "1.11", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.9", features = ["parse"] }
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
ctrlc = { version = "3.5", features = ["termination"] }
color-print = { version = "0.3", features = ["terminfo"] }
zookeeper-client = "0.11"
etcd-client = "0.18"

[dependencies]
tokio = { workspace = true }
rand = { workspace = true }
rangemap = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
async-trait = "0.1"
fixedbitset = { version = "0.5", features = ["serde"] }
atomic_refcell = "0.1"
dashmap = "6.1"
futures = "0.3"
bincode = "2.0"
reed-solomon-erasure = { version = "6.0" }
petgraph = "0.8"
get-size = { version = "0.1", features = ["derive"] }
linreg = "0.2"
statistical = "1.0"
# these are just for error conversion; could do it in a better way
ctrlc = { workspace = true }
zookeeper-client = { workspace = true }
etcd-client = { workspace = true }

[dev-dependencies]
criterion = "0.8"
sysinfo = "0.37"

[features]
rse-simd = ["reed-solomon-erasure/simd-accel"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = false
debug = "limited"

[[bench]]
name = "rse_bench"
harness = false

[lints.clippy]
pedantic = "warn"
