[package]
name = "summerset_bench"
description = "Summerset client benchmarking executable"
version = "0.1.0"
edition = "2021"
authors = ["Guanzhou Jose Hu <huguanzhou123@gmail.com>"]

[dependencies]
summerset_client = { path = "../summerset_client" }
clap = { version = "4.0", features = ["derive"] }
