[package]
name = "summerset_bench"
description = "Summerset client benchmarking executable"
version = "0.1.0"
edition = "2021"
authors = ["Guanzhou Jose Hu <huguanzhou123@gmail.com>"]

[dependencies]
summerset_client = { path = "../summerset_client" }
tokio = { version = "1.27", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
