[package]
name = "summerset_client"
description = "Summerset client-side executable"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
authors = ["Guanzhou Hu <me@josehu.com>"]

[dependencies]
summerset = { path = "../" }
tokio = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rangemap = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }
color-print = { workspace = true }
zookeeper-client = { workspace = true }
etcd-client = { workspace = true }
