[package]
name = "summerset_manager"
description = "Summerset cluster manager oracle"
version = "0.1.0"
edition = "2021"
authors = ["Guanzhou Hu <me@josehu.com>"]

[dependencies]
summerset = { path = "../" }
tokio = { workspace = true }
rand = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }
ctrlc = { workspace = true }
