[package]
name = "summerset_server"
description = "Summerset server node executable"
version = "0.1.0"
edition = "2021"
authors = ["Guanzhou Jose Hu <huguanzhou123@gmail.com>"]

[dependencies]
summerset = { path = "../" }
tokio = { version = "1.29", features = ["macros", "rt-multi-thread"] }
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
