[package]
name = "summerset_server"
description = "Summerset server node executable"
version = "0.1.0"
edition = "2021"
authors = ["Guanzhou Hu <me@josehu.com>"]

[dependencies]
summerset = { path = "../" }
tokio = { version = "1.39", features = ["full"] }
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
ctrlc = { version = "3.4", features = ["termination"] }
